Update api operations and regenerate client schemas
